<resources>
    <string name="app_name">Musics</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_musics">NEW MUSICS</string>
    <string name="save">save</string>
    <string name="new_music">NEW MUSIC</string>
    <string name="musics">Musics</string>
    <string name="name">Name:</string>
    <string name="gender">Gender:</string>
    <string name="instruments">Instruments</string>
    <string name="nameItem">name</string>
</resources>